chore: Update to latest library version and to Java 25